# mlflow-databricks-demo

./: .env.example  .gitignore  GOAL.md  PIPELINES.md  README.md  databricks.yml  predict.py  pyproject.toml  train.py
.github/workflows/: databricks-bundle.yml
config/: defaults.json
resources/: feature_store.yml  model_training.yml  serving_endpoint.yml  unity_catalog.yml
src/: __init__.py  audit.py  data.py  databricks_auth.py  deploy_champion.py  feature_store.ipynb  features.py  generator.py  model_registry.py  pipeline.py
