[project]
name = "mlflow-databricks-demo"
version = "0.1.0"
description = "Local end-to-end MLOps laboratory aligned with a Databricks and MLflow workflow."
requires-python = ">=3.13"
dependencies = [
    "pyspark>=4.1.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
